src/objects/Channel_Market_Coverage_Product_Lines__c.object
<CustomObject>
    <description>R5 - Channel Market Coverage Product Lines</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>CASESAFEID(Channel_Market_Coverage__r.Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Id__c</fullName>
        <formula>CASESAFEID(Channel_Market_Coverage__r.Account__r.OwnerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Stock__c</fullName>
        <description>R5 - Actual Stock</description>
        <inlineHelpText>Indicate the current stock level for the product, either in # products or in value (indicate which). Used to search possible stocking partners when urgent needs from customers.</inlineHelpText>
        <label>Actual Stock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Name__c</fullName>
        <description>R5 - Business Unit Name</description>
        <label>Business Unit Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>R5 - Business Unit</description>
        <inlineHelpText>DIv, BU and PG are only editable if there are no pre-filled values. (Default values from Master Data)</inlineHelpText>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Market_Coverage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup Relationship to Channel Market Coverage</description>
        <inlineHelpText>Channel Market Scope this product is connected to</inlineHelpText>
        <label>Channel Market Scope</label>
        <referenceTo>Channel_Market_Coverage__c</referenceTo>
        <relationshipName>Channel_Market_Coverage_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <description>R5 - Division Name</description>
        <label>Division Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>R5 - Division</description>
        <inlineHelpText>DIv, BU and PG are only editable if there are no pre-filled values. (Default values from Master Data)</inlineHelpText>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <description>R5 - Other Information</description>
        <inlineHelpText>Additional logistics and stock information about this product</inlineHelpText>
        <label>Other Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Stock__c</fullName>
        <description>R5 - Planned Stock</description>
        <inlineHelpText>Stock level planned to meet the targeted lead time, either in # products or in value (indicate which).</inlineHelpText>
        <label>Planned Stock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country__c</fullName>
        <description>R5 - Copies Primary Address Country from Account .</description>
        <formula>TEXT( Channel_Market_Coverage__r.Account__r.Primary_Address_Country__c )</formula>
        <label>Primary Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>R5 - Product Group</description>
        <inlineHelpText>DIv, BU and PG are only editable if there are no pre-filled values. (Default values from Master Data)</inlineHelpText>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>R5 - Product Line</description>
        <inlineHelpText>Give descriptive name. Visible in related list views</inlineHelpText>
        <label>Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup to Product</description>
        <inlineHelpText>Pick from the product tree. Use level practical for defining sales plans and targeted stock levels.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Channel Partner Product Mix</relationshipLabel>
        <relationshipName>Channel_Market_Coverage_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Lead_Times__c</fullName>
        <description>R5 - Target Lead Times</description>
        <inlineHelpText>Indicate how fast customers tend to require the product indicated. E.g. &quot;Out of stock&quot; ;  &quot;in 2 days&quot; or  &quot;in 2 weeks&quot;</inlineHelpText>
        <label>Target Lead Times</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_Stock__c</fullName>
        <description>R5 - Targeted Stock</description>
        <label>Targeted Stock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Product_Check__c</fullName>
        <description>R5 - Duplicate check in Channel Market Coverage Product Lines and Channel Market Coverage.</description>
        <label>Unique Product Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Channel Partner Product Mix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CHAN-PROD-LINE-{0000}</displayFormat>
        <label>Product Mix</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Partner Product Mix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>